<resources>
    <string name="app_name">Leeinit</string>

    <string name="L_SIGN_IN">Sign In</string>
    <string name="L_EMAIL">Email</string>
    <string name="L_PASSWORD">Password</string>
    <string name="L_SHOP_IDENTIFIER">Shop identifier</string>
    <string name="L_NAME">Name</string>
    <string name="L_SIGN_UP">Sign Up</string>

    <string name="S_ENTER_PASSWORD">Please enter password!</string>
    <string name="S_ENTER_NAME">Please enter name!</string>
    <string name="S_ENTER_SHOP_IDENTIFIER">Please enter shop identifier!</string>
    <string name="S_ENTER_EMAIL">Please enter email!</string>
    <string name="S_LOGIN_FAIL">Login failed.</string>
    <string name="S_REGISTER_FAIL">Register failed.</string>

    <string name="NO_DATA">You don\'t have any\nrequest</string>

    <!--Drawer-->
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <string name="M_NAME">Shop Menu</string>
    <string name="M_HOME">Home</string>
    <string name="M_CLOSE_CHAT">Close Chat</string>
    <string name="M_LOGOUT">Logout</string>

    <string name="C_MESSAGE">Enter Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
